# skeg-hull

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/skeg-hull/: Cargo.toml
crates/skeg-hull/src/: atomic.rs  checksum.rs  compat.rs  error.rs  format.rs  header.rs  lib.rs  scrub.rs
crates/skeg-hull/src/kv_cache/: blob.rs  identity.rs  mod.rs  read.rs  shape.rs  write.rs
crates/skeg-hull/src/saga/: centroid.rs  meta.rs  mod.rs  read.rs  tags.rs  write.rs
crates/skeg-hull/tests/: atomic_concurrent.rs  gates.rs  kv_cache_forward_compat.rs  kv_cache_roundtrip.rs  kv_cache_size_validation.rs  saga_roundtrip.rs
