[workspace]
members = ["crates/skeg-hull"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/skegdb/skeg-hull"
homepage = "https://github.com/skegdb/skeg-hull"
authors = ["skeg contributors"]

[workspace.dependencies]
bytes = "1"
crc32c = "0.6"
thiserror = "2"

[workspace.lints.clippy]
uninlined_format_args = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
