[package]
name = "skeg-hull"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "On-disk format of skeg: stable, versioned, readable without the engine"
readme = "../../README.md"
keywords = ["skeg", "binary-format", "saga", "storage"]
categories = ["encoding", "data-structures"]

[dependencies]
bytes = { workspace = true }
crc32c = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
